--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "pretty-ms": "^5.1.0"
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/lab": "^4.0.0-alpha.35",
+    "axios": "^0.19.0",
+    "image-loader": "0.0.1",
+    "pretty-ms": "^5.1.0",
+    "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0"
   }
 }
