--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-loader": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.0.1",
