--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "image-loader": "0.0.1",
     "pretty-ms": "^5.1.0",
     "react-star-rating-component": "^1.4.1",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "redux": "^4.0.5"
   }
 }
